portfolio section update

--- a/index.html
+++ b/index.html
@@ -56,6 +56,48 @@
         </div>
     </section>
 
+    <!-- portfolio area  -->
+    <section class=" section-gap">
+        <div class="container portfolio-area">
+
+            <div class="portfolio-text">
+                <div class="title-text">
+                    <h3 class="secondary-title left-border">Features you will love & enjoy</h3>
+                    <p class="primary-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="portfolio-body-text">
+                    <!-- single body text -->
+                    <div class="single-body-text">
+                        <h4 class="third-title">Dexktop & Mobile Version</h4>
+                        <p class="primary-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                    <!-- single body text -->
+                    <div class="single-body-text">
+                        <h4 class="third-title">Drag & Drop Builder</h4>
+                        <p class="primary-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                    <!-- single body text -->
+                    <div class="single-body-text">
+                        <h4 class="third-title">Awesome Modern Design</h4>
+                        <p class="primary-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+
+                    <!-- single body text -->
+                    <div class="single-body-text">
+                        <h4 class="third-title">Super Easy to Edit</h4>
+                        <p class="primary-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <!-- portfolio image area -->
+            <div class="portfolio-img">
+                <img src="images/architect.png" alt="">
+            </div>
+        </div>
+    </section>
+
     <!-- Some Facts area start -->
 
     <section class="fact-area">
