--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
     </section>
 
     <!-- portfolio area  -->
-    <section class=" section-gap">
+    <section class="portfoli-body section-gap">
+
         <div class="container portfolio-area">
 
             <div class="portfolio-text">
@@ -95,7 +96,12 @@
             <div class="portfolio-img">
                 <img src="images/architect.png" alt="">
             </div>
+            
         </div>
+        <button class="secondary-btn">
+            <h2>10+ Year</h2>
+            <h4>Experience</h4>
+        </button>
     </section>
 
     <!-- Some Facts area start -->
